package com.skplanet.storeplatform.sac.client.product.vo;

option java_package = "com.skplanet.storeplatform.sac.client.product.vo";

import "intfmessage/common/CommonResponseProto.proto";
import "intfmessage/product/ProductProto.proto";

// Request message
message reqBestApp {
    required string listId = 1;         //리스트 Id
    required string imageSizeCd = 2;    //이미지 사이즈 코드
    optional string drm = 3;            //drm 지원구분
    optional string prodGradeCd = 4;    //상품등급코드
    optional string menuId = 5;         //메뉴 Id
    optional string offset = 6;         //시작점 ROW
    optional string count = 7;          //페이지당 노출 ROW 수
}

// Default message
message BestApp {
    required com.skplanet.storeplatform.sac.client.intfmessage.common.vo.CommonResponse commonRes = 1;    // 공통 Response
    required com.skplanet.storeplatform.sac.client.intfmessage.product.vo.Product productList = 2;
}

// Response message
message resBestApp{
    repeated BestApp bestAppList = 1;
}

